atualização de estilos do desafio 012

--- a/desafios/d012/estilo/style.css
+++ b/desafios/d012/estilo/style.css
@@ -6,13 +6,14 @@
 
 :root {
     --fonte1: Verdana, Geneva, Tahoma, sans-serif;
-    --fonte2: 'Passion One', sans-serif;
+    --fonte2: 'Passion One', cursive;
     --fonte3: 'Sriracha', cursive;
 }
 
 * {
     margin: 0px;
     padding: 0px;
+    font-size: 1em;
 }
 
 html, body {
@@ -31,6 +32,7 @@ header > h1 {
     padding-top: 50px;
     font-variant: small-caps;
     font-family: var(--fonte2);
+    font-size: 9vw;
     /*  text-transform: uppercase (Deixa todas as letras maiusculas*/
 }
 
@@ -52,7 +54,9 @@ section {
     padding-top: 10vh;
     padding-bottom: 10vh;
     padding-left: 30px;
-    line-height: 2em;    
+    line-height: 2em;   
+    font-family: var(--fonte3);
+    font-size: 3.5vw; 
 }
 
 section.normal {
@@ -66,7 +70,8 @@ section.imagem {
 }
 
 section.imagem > p {
-    width: 400px;
+    display: inline-block;
+    padding: 5px;
     background-color: rgba(0, 0, 0, 0.253);
 }
 
